--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -26,3 +26,6 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+.custom-dot-list-style {
+  margin-top: 80px; /* ajusta este valor como desees */
+}
